--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,2 @@
 [build]
-  command = "npm run build"
-  publish = "dist"
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+  publish = "."
